--- a/views/promizesViewOne.ejs
+++ b/views/promizesViewOne.ejs
@@ -24,7 +24,7 @@
                 <td class="label" valign="top">Bank ID</td><td align="right"><%=data[0].bank%></td>
             </tr>
             <tr>
-                <td class="label" valign="top">Amount</td><td align="right"><%=data[0].amount%></td>
+                <td class="label" valign="top">Amount</td><td align="right"><%=data[0].amount+".00"%></td>
             </tr>
             <!--<tr>
                 <td class="label" valign="top">Date</td><td align="right"> <%=data[0].date%></td>
