--- a/views/alltransaction_blocks.ejs
+++ b/views/alltransaction_blocks.ejs
@@ -29,10 +29,10 @@
             <tr  class='clickable-row' data-href='/processingTransaction/<%= data[i].id %>'>
                 <td><%= data[i].id %></td>
                 <td><%= data[i].bank %></td>
-                <td><%= data[i].promize_amount %></td>
+                <td><%= data[i].promize_amount+".00" %></td>
                 <td><%= data[i].from_account %></td>
                 <td><%= data[i].to_account %></td>
-                <td><%= moment(parseInt(data.timestamp)).format("DD MMM YYYY hh:mm:ss a")%></td>
+                <td><%= moment(parseInt(data[i].timestamp)).format("DD MMM YYYY hh:mm:ss a")%></td>
 
             </tr>
             <% }
