--- a/views/alltransaction_promize.ejs
+++ b/views/alltransaction_promize.ejs
@@ -31,10 +31,10 @@
             <tr>
                 <td><%= data[i].id %></td>
                 <td><%= data[i].bank %></td>
-                <td><%= data[i].promize_amount %></td>
+                <td><%= data[i].promize_amount+".00" %></td>
                 <td><%= data[i].from_account %></td>
                 <td><%= data[i].to_account %></td>
-                <td><%= moment(parseInt(data.timestamp)).format("DD MMM YYYY hh:mm:ss a")%></td>
+                <td><%= moment(parseInt(data[i].timestamp)).format("DD MMM YYYY hh:mm:ss a")%></td>
                 <!-- <td>
                     <a class="a-inside edit" href="/pendingTransaction/<%=data[i].id%>">View</a>
                 </td>-->
