--- a/views/processingTransaction.ejs
+++ b/views/processingTransaction.ejs
@@ -35,7 +35,7 @@
             $.getJSON('/processingTransaction_next/' + $("#processingTrows tr:last>td:first").text(), function(data){
                 data.filter(function (data, i){
                     var url = '/processingTransaction/'
-                    $("#processingTrows").append("<tr class='clickable-row' ><td><a href="+url+data.id+" > " +  data.id + "</a></td> <td>" +data.bank + "</td> <td>" + data.promize_amount + "</td> <td>" + data.from_account + "</td><td>" + data.to_account + "</td><td>" + moment(parseInt(data.timestamp)).format("DD MMM YYYY hh:mm:ss a") + "</td> </tr>");
+                    $("#processingTrows").append("<tr class='clickable-row' ><td><a href="+url+data.id+" > " +  data.id + "</a></td> <td>" +data.bank + "</td> <td>" + data.promize_amount+".00" + "</td> <td>" + data.from_account + "</td><td>" + data.to_account + "</td><td>" + moment(parseInt(data.timestamp)).format("DD MMM YYYY hh:mm:ss a") + "</td> </tr>");
                 });
             })
         }
@@ -71,10 +71,10 @@
             <tr  class='' >
                 <td><a href='/processingTransaction/<%= data[i].id %>'><%= data[i].id %></a></td>
                 <td><%= data[i].bank %></td>
-                <td><%= data[i].promize_amount %></td>
+                <td><%= data[i].promize_amount+".00" %></td>
                 <td><%= data[i].from_account %></td>
                 <td><%= data[i].to_account %></td>
-                <td><%=  moment(parseInt(data.timestamp)).format("DD MMM YYYY hh:mm:ss a")%></td>
+                <td><%=  moment(parseInt(data[i].timestamp)).format("DD MMM YYYY hh:mm:ss a")%></td>
                <!-- <td>
                     <a class="a-inside edit" href="/pendingTransaction/<%=data[i].id%>">View</a>
                 </td>-->
