--- a/views/alltransaction.ejs
+++ b/views/alltransaction.ejs
@@ -2,7 +2,7 @@
 <%- include layouts/header.ejs %>
 
 <div id="mySidenav" class="sidenav" style="width: 16%;" >
-    <img  src="../images/bank-logo-light.png" style="padding-left:10%;padding-bottom: 5%;padding-top:10%;" >
+    <img  src="../images/bank-logo-light.png"  class="imageclass" >
     <a  class="navBar" href="/allblocks" style="padding-left:10%;">Blocks</a>
     <a  class="navBar" href="/processingTransaction"  style="padding-left:10%;">  Processing Transactions</a>
     <a  class="active" href="/alltransaction" style="padding-left:10%;">  All Transactions</a>
