--- a/views/expireInThreeMonthsViewOne.ejs
+++ b/views/expireInThreeMonthsViewOne.ejs
@@ -4,8 +4,9 @@
     <img  src="../images/bank-logo-light.png"  class="imageclass" >
     <a  class="navBar" href="/allblocks" style="padding-left:10%;">Blocks</a>
     <a  class="navBar" href="/processingTransaction"  style="padding-left:10%;">  Processing Transactions</a>
-    <a  class="active" href="/alltransaction" style="padding-left:10%;">  All Transactions</a>
+    <a  class="navBar" href="/alltransaction" style="padding-left:10%;">  All Transactions</a>
     <a  class="navBar" href="/allpromizes" style="padding-left:10%;" > iGifts</a>
+    <a  class="active" href="/expireInThreeMonthTransaction" style="padding-left:10%;" > Expire In Three Month</a>
     <a  class="navBar" href="/users" style="padding-left:10%;" > Users</a>
     <a  class="navBar" href="/logout" style="padding-left:10%;">  Logout</a>
 </div>
