--- a/views/users.ejs
+++ b/views/users.ejs
@@ -75,6 +75,7 @@
             for(var i = 0;i < data.length;i++) { %>
 
             <tr class=''>
+                <td style="display:none;"><%= data[i].timestamp %></td>
                 <td><a href='/users_one/<%= data[i].zaddress %>'><%=data[i].zaddress%></a></td>
                 <td><%= data[i].bank %></td>
                 <td><%= data[i].account %></td>
