scorll issue solve

--- a/views/allblocks.ejs
+++ b/views/allblocks.ejs
@@ -20,10 +20,10 @@
 </style>
 
 <script>
-     $(window).scroll(function() {
-       yHandler();
+   /*  $(window).scroll(function() {
+    //   yHandler();
 
-    });
+    });*/
 
 
     function yHandler(){
@@ -103,6 +103,10 @@
                      <%}%>
         </div>-->
     </div>
+    <div align="right" style="padding-top: 2%;padding-right:3%; ">
+    <a class="a-inside edit" onclick=" yHandler()">Next</a>
+    </div>
+
     <div id="status"></div>
     <div id="wrap">
 </div>
