--- a/views/processingTransaction.ejs
+++ b/views/processingTransaction.ejs
@@ -97,6 +97,9 @@
             <%}%>
         </div>-->
     </div>
+    <div align="right" style="padding-top: 2%;padding-right:3%; ">
+        <a class="a-inside edit" onclick=" yHandler()">Next</a>
+    </div>
     <div id="status"></div>
     <div id="wrap">
 </div>
