--- a/views/allpromizes.ejs
+++ b/views/allpromizes.ejs
@@ -18,10 +18,12 @@
     div.newData{}
 </style>
 <script>
+/*
 
     $(window).scroll(function() {
         yHandler();
     });
+*/
 
 
     function yHandler(){
@@ -105,6 +107,9 @@
         <a class="a-inside edit" href="/allcheques_previous/<%=data[0].id%>">Previous</a><a class="a-inside edit" href='/allcheques_next/<%=data[data.length-1].id%>'>Next</a>
        <%}%>
         </div>-->
+    </div>
+    <div align="right" style="padding-top: 2%;padding-right:3%; ">
+        <a class="a-inside edit" onclick=" yHandler()">Next</a>
     </div>
     <div id="status"></div>
     <div id="wrap">
