--- a/views/alltransaction.ejs
+++ b/views/alltransaction.ejs
@@ -18,10 +18,10 @@
     div.newData{}
 </style>
 <script>
-
+/*
     $(window).scroll(function() {
         yHandler();
-    });
+    });*/
 
 
     function yHandler(){
@@ -99,6 +99,9 @@
             <a class="a-inside edit" href="/allTransaction_previous/<%=data[0].id%>">Previous</a><a class="a-inside edit" href='/allTransaction_next/<%=data[data.length-1].id%>'>Next</a>
             <%}%>
         </div>-->
+    </div>
+    <div align="right" style="padding-top: 2%;padding-right:3%; ">
+        <a class="a-inside edit" onclick=" yHandler()">Next</a>
     </div>
     <div id="status"></div>
     <div id="wrap">
